# YT-Download

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  docker-compose.yml  netlify.toml
backend/: .env.example  Dockerfile  README.md  gunicorn_conf.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/exceptions/: custom.py  handlers.py
backend/app/api/v1/: api.py  dependencies.py
backend/app/api/v1/endpoints/: download.py  health.py  history.py  metadata.py
backend/app/core/: base.py  factory.py  instagram.py  rate_limiter.py  youtube.py
backend/app/infrastructure/cache/: base.py  memory.py  redis.py
backend/app/infrastructure/storage/: local.py
backend/app/infrastructure/tools/: health_check.py
backend/app/infrastructure/websocket/: manager.py
backend/app/schemas/: common.py  download.py  format.py  metadata.py
backend/app/services/: download_service.py  metadata_service.py  queue_service.py  validation_service.py
backend/app/tests/: conftest.py  test_main.py
backend/app/tests/integration/: test_api_endpoints.py
backend/app/tests/unit/: test_url_parser.py  test_validation_service.py  test_youtube_format_candidates.py
backend/app/utils/: file_utils.py  progress.py  security.py  url_parser.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  manifest.json  styles.scss
scripts/: convert_cookies.py  dev-start.sh  lint.sh  setup.sh  test.sh
(+15 files in other folders)
