[tool.poetry]
name = "media-downloader-backend"
version = "1.0.0"
description = "YouTube & Instagram video downloader API"
authors = ["Vaibhav Dhaduk <vaibhav@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^22.0.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
aiofiles = "^23.2.1"
websockets = "^12.0"
yt-dlp = "^2024.4.9"
ffmpeg-python = "^0.2.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
redis = "^5.0.3"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"
structlog = "^24.1.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
mypy = "^1.9.0"
ruff = "^0.3.5"
black = "^24.4.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=app --cov-report=term-missing"
